# argus-panoptes

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  api-reference.html  architecture.html  changelog.html  configuration.html  contributing.html  deployment.html  feed.xml  getting-started.html  index.html  pyproject.toml  sdk.html  sitemap.xml  tailwind.config.js  user-guide.html
.github/workflows/: ci.yml  docker.yml  pages.yml
assets/css/: main.css
config/: argus.example.yaml  argus.yaml
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: Gemfile  _config.yml  api-reference.md  architecture.md  changelog.md  configuration.md  contributing.md  deployment.md  getting-started.md  index.md  robots.txt  sdk.md  user-guide.md
docs/_includes/: footer.html  head.html  nav.html
docs/_layouts/: default.html  page.html
migrations/: env.py
sdk/python/: pyproject.toml
sdk/python/argus_sdk/: __init__.py  reporter.py
src/argus/: __init__.py  main.py
src/argus/core/: config.py  database.py  security.py  sse.py  utils.py
src/argus/models/: __init__.py  agent.py  metric_snapshot.py  span.py  tool_call.py  trace.py
src/argus/routes/api/: agents.py  alerts.py  config.py  ingest.py  metrics.py  sse.py  traces.py
src/argus/routes/views/: agent_detail.py  alerts.py  config_editor.py  dashboard.py  traces.py
src/argus/schemas/: agent.py  config.py  otlp.py  trace.py
src/argus/sdk/: __init__.py  reporter.py
src/argus/services/: agent_registry.py  alerting.py  cost_calculator.py  ingestion.py  metrics.py  trace_query.py  webhooks.py
src/templates/: base.html
src/templates/components/: chart_wrapper.html  metric_card.html  metrics_cards.html  span_tree.html  time_picker.html  tool_call_panel.html  trace_list.html
src/templates/pages/: agent_detail.html  agents.html  alerts.html  config.html  dashboard.html  trace_compare.html  trace_detail.html  traces.html
static/css/: input.css  output.css
static/js/: alpine.min.js  htmx-sse.js  htmx.min.js
tests/: conftest.py
tests/unit/: test_agent_registry.py  test_alert_views.py  test_alerting.py  test_alerts_api.py  test_all_schemas.py  test_api_metrics.py  test_config.py  test_config_api.py  test_config_validation.py  test_cost_calculator.py  test_dashboard.py  test_dashboard_enhanced.py  test_database.py  test_database_postgres.py  test_docs_site.py  test_health.py  test_ingest.py  test_ingestion_service.py  test_metrics_service.py  test_models.py  test_otlp_ingestion.py  test_qa_fixes.py  test_schemas.py  test_sdk_shim.py  test_security.py  test_sse.py  test_trace_api.py  test_trace_service.py  test_trace_views.py  test_webhooks.py
